header alignment fix

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -25,6 +25,9 @@ header {
             &:hover {
                 color:#F0469F;
             }
+            &.align-right {
+                margin-right:auto;
+            }
         }
 
         img{
